// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadEmbedding action Dispatches error action on unsuccessful loading 1`] = `
{
  "payload": {
    "embeddingType": "umap",
  },
  "type": "embeddings/loading",
}
`;

exports[`loadEmbedding action Dispatches error action on unsuccessful loading 2`] = `
{
  "payload": {
    "embeddingType": "umap",
    "error": [Error: random error!],
    "experimentId": "1234",
  },
  "type": "embeddings/error",
}
`;

exports[`loadEmbedding action Dispatches on a previous error condition 1`] = `
{
  "payload": {
    "embeddingType": "umap",
  },
  "type": "embeddings/loading",
}
`;

exports[`loadEmbedding action Dispatches on a previous error condition 2`] = `
{
  "payload": {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
        4,
      ],
    ],
    "embeddingType": "umap",
    "experimentId": "1234",
  },
  "type": "embeddings/loaded",
}
`;

exports[`loadEmbedding action Dispatches on a previously unseen embedding 1`] = `
{
  "payload": {
    "embeddingType": "umap",
  },
  "type": "embeddings/loading",
}
`;

exports[`loadEmbedding action Dispatches on a previously unseen embedding 2`] = `
{
  "payload": {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
        4,
      ],
    ],
    "embeddingType": "umap",
    "experimentId": "1234",
  },
  "type": "embeddings/loaded",
}
`;

exports[`loadEmbedding action Dispatches on if forceReload is set to true 1`] = `
{
  "payload": {
    "embeddingType": "umap",
  },
  "type": "embeddings/loading",
}
`;

exports[`loadEmbedding action Dispatches on if forceReload is set to true 2`] = `
{
  "payload": {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
        4,
      ],
    ],
    "embeddingType": "umap",
    "experimentId": "1234",
  },
  "type": "embeddings/loaded",
}
`;
